<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="35dp"
        android:text="@string/text_host_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp"
        android:text="@string/text_port_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/text_host_default" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/textPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textHost"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/text_port_default" >
    </EditText>

    <TextView
        android:id="@+id/textMessageHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="35dp"
        android:text="@string/text_message_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textMessageHint"
        android:layout_alignLeft="@+id/textPort"
        android:ems="10"
        android:inputType="text"
        android:text="@string/text_message_default" />

    <Button
        android:id="@+id/buttonGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClick"
        android:text="@string/button_get" />

    <TextView
        android:id="@+id/textServerResponseHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textMessageHint"
        android:layout_below="@+id/buttonGet"
        android:layout_marginTop="53dp"
        android:layout_toLeftOf="@+id/textHost"
        android:text="@string/server_response"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textServerResponseHint"
        android:layout_alignLeft="@+id/textMessage"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLog"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/buttonGet"
        android:onClick="onClick"
        android:text="@string/button_clear" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textServerResponseHint"
        android:layout_alignTop="@+id/buttonClear"
        android:layout_toLeftOf="@+id/textHost" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignTop="@+id/textView3"
        android:onClick="onClickWifi"
        android:text="@string/text_wifi_config" />

</RelativeLayout>
