<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/hash_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:hint="@string/enter_hash"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/get_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:onClick="getButtonClicked"
        android:text="@string/get_button" />

    <TextView
        android:id="@+id/ProgressBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/text_BT_Connected"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressbar_Horizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hash_field"
        android:layout_alignRight="@+id/hash_field"
        android:layout_below="@+id/ProgressBarText"
        android:max="100"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressbar_Horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="publishButtonClicked"
        android:text="@string/publish_button" />

</RelativeLayout>